# boats

./: pyproject.toml
boat/: admin.py  models.py
boat/migrations/: 0001_initial.py  0002_boat_price.py
boat/templates/boat/: base.html  boat_detail.html  boat_list.html
config/: settings.py  urls.py
order/: services.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/templates/order/: order_form.html
